--- a/React/styling-react/src/CSSModule.module.scss
+++ b/React/styling-react/src/CSSModule.module.scss
@@ -3,15 +3,16 @@
   padding: 1rem;
   color : white;
   font-size:2rem;
-}
-
-.inverted {
+  &.inverted {
   color : black;
   background: white;
   border : 1px solid black;
+  }
 }
 
-:global .something {
-  font-weight: 800;
-  color: aqua;
+:global {
+  .something{
+    font-weight: 800;
+    color: aqua;
+  }
 }
